# google-trends

./: .gitignore  .pre-commit-config.yaml  ASSIGNMENT.md  README.md  environment.yaml  main.sh  pyproject.toml  requirements.txt
gtrends/: calc.py  collect.py
