[tool.poetry]
name = "eonlabs"
version = "0.1.0"
description = "EonLabs Data Collection assessment."
authors = [
    "Aditya Ghaffar <adit.bisa@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.8"
pytrends = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
